Add Input Parameter For Maximal Display Data After Search

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="name">UserName</string>
     <string name="githublink">GitHubLink</string>
     <string name="SearchGitHubUser">Search</string>
-    <string name="title_error">Octocat</string>
+    <string name="title_error">Users </string>
     <string name="message_error">Search Github Users</string>
 </resources>
